autobuilder (5.8) unstable; urgency=low

  * Make the separator between the regular and quilt versions "++" instead
    of just "+", so that adding a quilt patch trumps versions that just had
    the "+seereason" vendor tag appended.

 -- David Fox <dsf@seereason.com>  Wed, 19 Aug 2009 17:16:35 -0700

autobuilder (5.7) unstable; urgency=low

  * Add an oldVendorTags field to the Params structure, so we can change
    the vendor tag we are using and still strip the old and the new tag
    when deciding what the upstream source package version is.

 -- David Fox <dsf@seereason.com>  Mon, 27 Jul 2009 10:43:46 -0700

autobuilder (5.6) unstable; urgency=low

  * This version pulls in a more lenient changelog parser in haskell-debian,
    instead of the normal two spaces at the beginning of log entry lines, it
    allows a tab or a space and a tab.

 -- David Fox <dsf@seereason.com>  Tue, 21 Jul 2009 11:55:50 -0700

autobuilder (5.5) unstable; urgency=low

  * Add a "twice:" target to control whether we run dpkg-buildpackage a
    second time if the first time fails.  Some packages are designed to
    configure themselves and fail the first time you build them, and
    succeed the second time, in order to prevent fully automated builds.
    Up until now the autobuilder always tried dpkg-buildpackage twice, now
    you need to add "twice:" to the front of the target to get this
    behavior.
  * Support the SHA1 and SHA256 checksums that debian now puts into the
    .changes file by updating them when the autobuilder edits the .dsc
    file.

 -- David Fox <dsf@seereason.com>  Fri, 03 Apr 2009 14:52:34 -0700

autobuilder (5.4) unstable; urgency=low

  * Fix handling of architecture independent packages that were
    already build on a machine with a different architecture.

 -- David Fox <dsf@seereason.com>  Mon, 23 Feb 2009 07:02:04 -0800

autobuilder (5.3) unstable; urgency=low

  * Put more useful text into the Changes field of the .changes file,