@@ -3,6 +3,8 @@ autobuilder (5.8) unstable; urgency=low
   * Make the separator between the regular and quilt versions "++" instead
     of just "+", so that adding a quilt patch trumps versions that just had
     the "+seereason" vendor tag appended.
+  * Adjust the vendor tag so it has a suitable number of '+' - generally one,
+    possibly two if your vendor name starts with a or b.
 
  -- David Fox <dsf@seereason.com>  Wed, 19 Aug 2009 17:16:35 -0700
 
